# VAULTMIND

./: .env.example  .gitignore  COMPLETE_PROJECT_GUIDE.md  LICENSE  PHASE3_IMPLEMENTATION_REPORT.md  PRD.md  README.md  config.example.yaml  demo.tape  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/vaultmind/: __init__.py  config.py  main.py  schemas.py
src/vaultmind/ai/: asker.py  compiler.py  json_utils.py  knowledge.py  pipeline.py  prompts.py
src/vaultmind/ai/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
src/vaultmind/commands/: __init__.py  ask.py  brief.py  compile.py  digest.py  find.py  flashcard.py  init.py  reflect.py  save.py  stats.py
src/vaultmind/core/: extractors.py  flashcards.py  github.py  linker.py  manifest.py  moc.py  raw_scanner.py  reddit.py  renderers.py  router.py  scraper.py  search.py  twitter.py  vault_index.py  wiki_log.py  writer.py
src/vaultmind/utils/: display.py  hashing.py  logging.py  tags.py  urls.py
tests/: conftest.py  test_asker.py  test_compiler.py  test_core_flashcards.py  test_core_moc.py  test_extractors.py  test_fixture_vault.py  test_knowledge.py  test_linker.py  test_pipeline.py  test_prompts.py  test_providers.py  test_raw_scanner.py  test_renderers.py  test_router.py  test_schemas.py  test_search.py  test_tags.py  test_twitter.py  test_urls.py  test_vault_index.py  test_writer.py
tests/fixtures/vault/: VAULTMIND.md  vault.manifest.json
tests/test_commands/: test_brief.py  test_compile.py  test_digest.py  test_flashcard.py  test_reflect.py  test_save.py  test_stats.py
(+4 files in other folders)
